# yammar_ws

./: .gitignore  README.md
Jarp/: jarp.properties
src/: [2020-6-4 13:56:54:401].txt  [2020-6-4 14:21:59:652].txt  [2020-6-4 14:22:43:487].txt  [2020-6-4 14:37:39:777].txt  [2020-6-4 14:37:58:425].txt  [2020-6-4 14:44:16:686].txt  [2020-6-4 14:45:33:721].txt  [2020-6-4 14:46:47:318].txt  [2020-6-4 14:47:35:41].txt  [2020-6-4 14:47:50:525].txt  [2020-6-4 14:49:37:656].txt  [2020-6-4 14:50:47:297].txt  [2020-6-4 14:51:33:705].txt  [2020-6-4 14:51:52:972].txt  [2020-6-4 16:54:4:783].txt  compile_commands.json  pnp_msgs  pnp_ros  rp_action  rp_action_msgs
src/.clangd/index/: DosuBirdView.cpp.ED745C7D583D0620.idx  DosuBirdView.h.BBF7E47E99D67817.idx  bigcamera.cpp.4B61D3DEFC7B6DA3.idx  bigcamera.h.D70D56EAC88B1B1E.idx  camera_pub.cpp.582740581A324BA6.idx  find_cut_node_realtime.cpp.6537224CE60253F5.idx  get_image.cpp.B63E343986CC750D.idx  image_view.cpp.F7B889B318CE84B2.idx  image_view.h.D694D651A2F482E4.idx  img_publisher.cpp.CD197FA2C06398EA.idx  img_viewer.cpp.3A167367629D3B64.idx  main.cpp.7F74CE6B2B1DE0E2.idx  main.cpp.8A8F15E5181A141E.idx  main.cpp.8E5A5D5EB394C094.idx  main.cpp.DC4459067AC94763.idx  main_window.cpp.42DA5E3AD5397AD1.idx  main_window.hpp.6DAC5A0AA1936AFA.idx  mainwindow.cpp.827A40DD07C202B0.idx  mainwindow.h.BA68D402C9ACE601.idx  pcl_icp_node.cpp.703674187BB6D8C8.idx  qnode.cpp.C54A5CE86D5ED7F6.idx  qnode.cpp.F85B0A3891787247.idx  qnode.h.04CA89A229A8FF24.idx  qnode.hpp.8D4D4367055F80B2.idx  ratio_layouted_frame.cpp.76E3E6A971794120.idx  ratio_layouted_frame.h.D0E321B2AA19F487.idx  rgbd_node.cpp.1C6833EAB37ADEBE.idx
src/QT_ROS_Visp_kinectV2_platform-cv_test/src/: mainwindow.ui
src/Qt_gui_test/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1
src/Qt_gui_test/src/: Widget.cpp  Widget.h  bigcamera.cpp  bigcamera.h  bigcamera.ui  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  qnode.cpp  qnode.cpp.autosave  qnode.h  qnode.h.autosave
src/action_tutorials/: CHANGELOG.rst  CMakeLists.txt
src/action_tutorials/src/: DoDishes_client.cpp  DoDishes_server.cpp
src/avoiding_obstacle/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/avoiding_obstacle/src/: avoiding_obstacle_node.cpp
src/birdView_calibration_v2/: CHANGELOG.rst  CMakeLists.txt  calib.txt  config.xml  package.xml  target.xml
src/birdView_calibration_v2/cpp/: calibrationProgram.cpp
src/birdView_calibration_v2/include/: DosuBirdView.h
src/birdView_calibration_v2/src/: DosuBirdView.cpp  main.cpp
src/boud_RGBD/: CMakeLists.txt  CMakeLists.txt.autosave  main.cpp  package.xml
src/boud_rgbd/: CHANGELOG.rst  CMakeLists.txt  DBSCAN.cpp  main.cpp
src/boud_rgbd/include/: DBSCAN.h
src/camera_capture/: CHANGELOG.rst  CMakeLists.txt
src/camera_capture/src/: camera_capture_node.cpp
src/camera_image/: CHANGELOG.rst
src/control485/: CMakeLists.txt  package.xml
src/control485/action/: DriveMotor.action
src/control485/src/: control485_node.cpp  control485_node2.cpp
src/controlcan/: CMakeLists.txt
src/controlcan/src/: controlcan_node.cpp
src/dosuss_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dosuss_srvs/msg/: border_msg.msg
src/dosuss_srvs/srv/: find_cut.srv
src/fake_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/fake_msgs/src/: fake_msgs.cpp
src/find_cut/: CHANGELOG.rst  CMakeLists.txt
src/find_cut/src/: find_cut_node_realtime.cpp  get_image.cpp
src/full_view/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/full_view/src/: full_view_node.cpp
src/grain_height_detecte/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/grain_height_detecte/src/: grain_height_detecte_node.cpp
src/harvest_line_detecte/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/harvest_line_detecte/src/: harvest_line_detecte_node.cpp
src/height_border_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/height_border_msgs/msg/: height_border.msg
src/hmi/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/hmi/src/: hmi_node.cpp
src/launch_file/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/launch_file/launch/: milliwave-485-hmi-real-single.launch  milliwave-485-hmi-real.launch  milliwave-485-hmi.launch  task.launch  task_without_hmi.launch  task_without_hmi_and_monitor.launch
src/launch_file/rviz_config/: rviz.rviz
src/matplotlib_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/matplotlib_tutorial/src/: matplotlib_tutorial_node.cpp
src/mmw_capture/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/mmw_capture/launch/: radar.launch
src/mmw_capture/src/: mmw_capture_node.cpp  radar_node.cpp
src/mul_t/src/: qnode.cpp
src/mul_t/ui/: main_window.ui
src/obstacle_detecte/: CHANGELOG.rst  CMakeLists.txt
src/obstacle_detecte/src/: obstacle_detecte_node.cpp
src/obstacle_detecte_fake/: CMakeLists.txt  package.xml
src/obstacle_detecte_fake/src/: obstacle_detecte_fake_node.cpp
src/path_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/path_planning/: CHANGELOG.rst  CMakeLists.txt
src/pcl_icp/: CMakeLists.txt  package.xml
src/qtros/: package.xml
src/realsense2_driver/: CMakeLists.txt
src/reap_height_action/: CHANGELOG.rst  CMakeLists.txt
src/reap_height_capture/: CHANGELOG.rst  CMakeLists.txt
src/reap_height_capture/src/: CAN_DEVICE.cpp  CAN_DEVICE.h  reap_height_capture_node.cpp
src/reap_height_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/reap_unit_action/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/reap_unit_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rgbd/: CMakeLists.txt  package.xml
src/rp_action/: CHANGELOG.rst
src/rp_demo/: CHANGELOG.rst
src/rp_pnp/: CHANGELOG.rst
src/smach_tutorials/: CHANGELOG.rst  CMakeLists.txt
src/system_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/travel_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/unload_position_detecte/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/usb_cam/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+41 files in other folders)
