<?xml version="1.0"?>
<package>
  <name>height_border_msgs</name>
  <version>1.0.0</version>
  <description>The height_border_msgs package contains messages.</description>

  <maintainer email="xxx@xxx.xxx">Wenjun Jiang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
